<resources>
    <string name="app_name">1212508_1211441_CourseProject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">User E-mail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today">Today Tasks</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_all_tasks">All Tasks</string>
    <string name="menu_completed">Completed Tasks</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>
</resources>